--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>RxJS Boiler</title>
+	<title>RxJS Practice</title>
 </head>
 <body>
-	<h1>RxJS Boiler</h1>
-	<p>For more info, visit <a target="_blank" href="https://github.com/bradtraversy/rxjs_boiler">https://github.com/bradtraversy/rxjs_boiler</a></p>
+	<h1>RxJS Practice</h1>
+
+	<h2>Events as Observables</h2>
+
+	<button id="btn">Click</button>
+
+	<br>
+
+	<input id="input" type="text">
+
+	<br>
+
+	<div id="output"></div>
+
+	<h2>Arrays as Observables</h2>
+
+	<ul id="posts">
+
+	</ul>
 
 	<script src="./dist/app.bundle.js"></script>
 </body>
